# swarm_trajectory_planning

./: CMakeLists.txt  README.md  doxygen_configuration  gazebo.sh  mainpage.txt  package.xml  uav1.sh  uav2.sh  uav3.sh
Legacy/: boids.py  boids_eval.py  boids_splitting.py  main_experiments.py  main_heuristics.py  main_simulation.py  main_splitting.py  path.py  utils.py  voronoi_scipy.py  voronoi_vtk.py
Legacy/vtk_voro/: CMakeLists.txt  functional.cc  interactor2d.cc  interactor2d.h  main.cc  point.cc  segment.h  voronoi.h  vtktool.cc
config/: config.yaml  obstacles.txt
documentation/html/: Checkpoint_8cpp.html  Checkpoint_8cpp__incl.map  Checkpoint_8cpp__incl.md5  Checkpoint_8h_source.html  UAV_8cpp.html  UAV_8cpp__incl.map  UAV_8cpp__incl.md5  UAV_8h_source.html  annotated.html  classCheckpoint-members.html  classCheckpoint.html  classUAV-members.html  classUAV.html  classes.html  classgeom_1_1Point-members.html  classgeom_1_1Point.html  classgeom_1_1Points-members.html  classgeom_1_1Points.html  classgeom_1_1Points_1_1FROM__STRING-members.html  classgeom_1_1Points_1_1FROM__STRING.html  classgeom_1_1Points_1_1FROM__STRING__inherit__graph.map  classgeom_1_1Points_1_1FROM__STRING__inherit__graph.md5  classgeom_1_1Polygon-members.html  classgeom_1_1Polygon.html  classgeom_1_1Segment-members.html  classgeom_1_1Segment.html  classimr_1_1CInteractor2d-members.html  (+129 more)
headers/: Checkpoint.h  UAV.h  UAVController.h  data_fitting.h  graph.h
launch/: simulation.launch
src/: Checkpoint.cpp  UAV.cpp  UAVController.cpp  data_fitting.cpp  graph.cpp  main.cpp
(+91 files in other folders)
